<?xml version="1.0" encoding="UTF-8"?>
<!--suppress ALL -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.koala</groupId>
    <artifactId>tools</artifactId>
    <version>${revision}</version>
    <name>tools</name>
    <description>tools</description>
    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <java.version>17</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
    </dependencies>

    <packaging>pom</packaging>

    <modules>
        <module>rocketmq-spring-boot</module>
        <module>tools-base</module>
        <module>tools-data</module>
        <module>tools-service</module>
        <module>tools-factory</module>
        <module>tools-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-web</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-base</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-data</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-factory</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-service</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>rocketmq-spring-boot</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <!-- 用于替换 application.yml 中的变量 -->
                <mvn.profile.active>dev</mvn.profile.active>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>rocketmq-spring-boot</module>
                <module>tools-base</module>
                <module>tools-data</module>
                <module>tools-service</module>
                <module>tools-factory</module>
                <module>tools-web</module>
            </modules>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <mvn.profile.active>prod</mvn.profile.active>
            </properties>
            <modules>
                <module>rocketmq-spring-boot</module>
                <module>tools-base</module>
                <module>tools-data</module>
                <module>tools-service</module>
                <module>tools-factory</module>
                <module>tools-web</module>
            </modules>
        </profile>
        <profile>
            <id>docker</id>
            <properties>
                <mvn.profile.active>docker</mvn.profile.active>
            </properties>
            <modules>
                <module>rocketmq-spring-boot</module>
                <module>tools-base</module>
                <module>tools-data</module>
                <module>tools-service</module>
                <module>tools-factory</module>
                <module>tools-web</module>
            </modules>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <skipTests>true</skipTests>    <!--默认关掉单元测试 -->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
